test/langtools/tools/javac/valhalla/value-objects/CheckSynchronized.out
CheckSynchronized.java:9:23: compiler.err.mod.not.allowed.here: synchronized
CheckSynchronized.java:39:27: compiler.err.mod.not.allowed.here: synchronized
CheckSynchronized.java:12:9: compiler.err.type.found.req: CheckSynchronized, (compiler.misc.type.req.identity)
CheckSynchronized.java:15:9: compiler.err.type.found.req: CheckSynchronized, (compiler.misc.type.req.identity)
CheckSynchronized.java:19:9: compiler.err.type.found.req: CheckSynchronized, (compiler.misc.type.req.identity)
CheckSynchronized.java:23:9: compiler.err.type.found.req: int, (compiler.misc.type.req.identity)
- compiler.note.preview.filename: CheckSynchronized.java, DEFAULT
- compiler.note.preview.recompile
6 errors
